[package]
name = "gpui-terminal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Terminal emulator component for gpui"
repository = "https://github.com/zortax/gpui-terminal"
authors = ["Leonard Seibold <git[@]zrtx.de"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "52c963df1d5db578e713f0435d66910cd2001090" }
alacritty_terminal = "0.25.1"
anyhow = "1"
parking_lot = "0.12"
flume = "0.12"

[dependencies.arboard]
version = "3"
features = ["wayland-data-control"]

[dev-dependencies]
portable-pty = "0.9"
